# XenRoll

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md  build_debug.bat  build_first_time.bat  build_linux.sh  build_release.bat  rebuild.bat  vcpkg.json
.github/workflows/: cmake.yml
cmake/: CompilerWarnings.cmake
plugin/: CMakeLists.txt
plugin/MTS-ESP/: libMTSMaster.cpp  libMTSMaster.h
plugin/assets/icons/: All_icons.ai  All_icons_v2.ai
plugin/include/XenRoll/: AccumulatingBuffer.h  ChannelsManagerMPE.h  CircularStack.h  ClockDiagramMenu.h  ClockDiagramPanel.h  DissonanceMeter.h  DissonancePanel.h  DissonancePlot.h  DragAndDropPopup.h  EditRatiosMarksMenu.h  GenNewKeysMenu.h  GlobalSettings.h  HelpPanel.h  InstancesMenu.h  IntegerInput.h  LeftPanel.h  MainPanel.h  MoreToolsMenu.h  Note.h  NotePathManager.h  NotesSharingMPE.h  Parameters.h  PartialsFinder.h  PartialsPlot.h  PitchMemory.h  PitchMemorySettingsPanel.h  PluginEditor.h  PluginInstanceManager.h  PluginProcessor.h  PopupMessage.h  RatioMark.h  RelevanceQueue.h  SVGButton.h  SettingsPanel.h  Theme.h  TopPanel.h  VelocityPanel.h  VocalToMelodyMenu.h  VocalToNotesMenu.h  Zones.h
plugin/include/XenRoll/common/: CircularStack.h  Helpers.h  PlatformUtils.h
plugin/include/XenRoll/data/: GlobalSettings.h  Note.h  Parameters.h  PartialsTypes.h  RatioMark.h  Theme.h  Zones.h
plugin/include/XenRoll/editor/: DragAndDropPopup.h  PluginEditor.h
plugin/include/XenRoll/editor/common/: IntegerInput.h  PopupMessage.h  SVGButton.h
plugin/include/XenRoll/editor/menus/: ClockDiagramMenu.h  EditRatiosMarksMenu.h  GenNewKeysMenu.h  InstancesMenu.h  MoreToolsMenu.h  VocalToMelodyMenu.h
plugin/include/XenRoll/editor/models/: DissonanceMeter.h  PitchMemory.h
plugin/include/XenRoll/editor/panels/: ClockDiagramPanel.h  DissonancePanel.h  DissonancePlot.h  HelpPanel.h  LeftPanel.h  MainPanel.h  NotePathManager.h  PartialsPlot.h  PitchMemorySettingsPanel.h  SettingsPanel.h  TopPanel.h  VelocityPanel.h
plugin/include/XenRoll/processor/: PluginProcessor.h
plugin/include/XenRoll/processor/audio/: AccumulatingBuffer.h
plugin/include/XenRoll/processor/audio/dsp/: PartialsFinder.h  PitchDetectorMPM.h
plugin/include/XenRoll/processor/managers/: ChannelsManagerMPE.h  NotesSharingMPE.h  PluginInstanceManager.h
plugin/pitch-detection/: PitchDetectorMPM.cpp  PitchDetectorMPM.h
plugin/source/: ClockDiagramMenu.cpp  ClockDiagramPanel.cpp  DissonanceMeter.cpp  DissonancePanel.cpp  EditRatiosMarksMenu.cpp  GenNewKeysMenu.cpp  InstancesMenu.cpp  LeftPanel.cpp  MainPanel.cpp  MoreToolsMenu.cpp  NotePathManager.cpp  NotesSharingMPE.cpp  PartialsFinder.cpp  PitchMemory.cpp  PitchMemorySettingsPanel.cpp  PlatformUtils.cpp  PluginEditor.cpp  PluginInstanceManager.cpp  PluginProcessor.cpp  RatioMark.cpp  SettingsPanel.cpp  Theme.cpp  TopPanel.cpp  VocalToMelodyMenu.cpp  VocalToNotesMenu.cpp
plugin/source/common/: PlatformUtils.cpp
plugin/source/data/: RatioMark.cpp  Theme.cpp
plugin/source/editor/: PluginEditor.cpp
plugin/source/editor/menus/: ClockDiagramMenu.cpp  EditRatiosMarksMenu.cpp  GenNewKeysMenu.cpp  InstancesMenu.cpp  MoreToolsMenu.cpp  VocalToMelodyMenu.cpp
plugin/source/editor/models/: DissonanceMeter.cpp  PitchMemory.cpp
plugin/source/editor/panels/: ClockDiagramPanel.cpp  DissonancePanel.cpp  LeftPanel.cpp  MainPanel.cpp  NotePathManager.cpp  PitchMemorySettingsPanel.cpp  SettingsPanel.cpp  TopPanel.cpp
plugin/source/processor/: PluginProcessor.cpp
plugin/source/processor/audio/dsp/: PartialsFinder.cpp  PitchDetectorMPM.cpp
plugin/source/processor/managers/: NotesSharingMPE.cpp  PluginInstanceManager.cpp
readme_assets/: video1.webm  video2.webm
test/: CMakeLists.txt
test/source/: AudioProcessorTest.cpp
